--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,5 +1,14 @@
+
 @import "tailwindcss";
 @plugin "tailwind-scrollbar";
+:root {
+	--bg-radios: radial-gradient(
+		circle,
+		var(--white) 0%,
+		var(--white) 35%,
+		transparent 35%
+	);
+};
 
 @keyframes spin-slow {
 	from {
@@ -42,4 +51,12 @@
 
 .animate-reverse {
 	animation-direction: reverse;
+}
+.radio-checked {
+    background-image: radial-gradient(
+        circle,
+        white 0%,
+        white 35%,
+        transparent 35%
+    );
 }
