--- a/web/src/core/theme/index.css
+++ b/web/src/core/theme/index.css
@@ -7,6 +7,7 @@
 
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
+@plugin "tailwind-scrollbar";
 
 @theme {
     --font-titles: var(--titles);
