--- a/web/src/core/theme/index.css
+++ b/web/src/core/theme/index.css
@@ -15,3 +15,7 @@
     --color-primary: var(--dialca-primary);
     --color-secondary: var(--dialca-secondary);
 }
+
+.main-scroll {
+    @apply scrollbar-thin scrollbar-thumb-gray-300 dark:scrollbar-thumb-gray-700 scrollbar-track-transparent
+}
